--- a/genius-homework-1/index.html
+++ b/genius-homework-1/index.html
@@ -50,7 +50,7 @@
         </p>
       </section>
       <section id="about-us-section">
-        <h1 class="section-title about-us-title">
+        <h1 class="section-title">
           Перевтілюйтесь в <span class="accent">Beauty Zone!</span>
         </h1>
         <p class="about-us-text">
