--- a/genius-homework-1/index.html
+++ b/genius-homework-1/index.html
@@ -138,8 +138,8 @@
           <img src="./images/logo.svg" alt="Логотип Beauty Zone" />
         </a>
         <ul>
-          <li><a class="link" href="#about_us-section">Про нас</a></li>
-          <li><a class="link" href="#why_us-section">Чому ми</a></li>
+          <li><a class="link" href="#about-us-section">Про нас</a></li>
+          <li><a class="link" href="#why-us-section">Чому ми</a></li>
           <li><a class="link" href="#procedures-section">Наші процедури</a></li>
           <li><a class="link" href="#contact-section">Контакти</a></li>
         </ul>
